# n64-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.h  core.cpp  core.h  defs.h  main.cpp  n64base.z64
assets/: README.md  map.blend  map.glb  player.blend  player.glb  player2.blend  player2.glb  player3.blend  player3.glb
code/: config.h  n64-fishing.cpp  n64-fishing.h  world.cpp
code/animation/: anim.h  animationComponent.cpp  animationComponent.h
code/collision/: collider.cpp  collider.h  colliderEdge.h  colliderType.h  cylinder.cpp  cylinder.h  epa.cpp  epa.h  gjk.h  scene.cpp  scene.h  sphere.cpp
code/debug/: debugDraw.cpp  debugDraw.h  overlay.cpp  overlay.h
code/input/: AIInputStrategy.cpp  PlayerInputComponent.cpp  PlayerInputStrategy.cpp  inputComponent.cpp  inputComponent.h  inputState.h  inputstate.h
code/math/: box3d.h  plane.cpp  plane.h  quaternion.h  vector2.h  vector3.cpp  vector3.h
code/player/: playerConsts.h  playerData.h  playerState.cpp  playerState.h
code/scene/: camera.cpp  camera.h  fish.h  player.cpp  player.h  playerAi.cpp  playerAi.h  playerColliders.h  scene.cpp  scene.h
include/: ComponentRegistry.h  ComponentStore.h  EntityId.h  Logger.h  Scene.h  SceneId.h  World.h  config.h  world.h
include/input/: AIInputStrategy.h  InputComponentUpdate.h  InputComponentVariant.h  PlayerInputComponent.h  PlayerInputStrategy.h
include/scene/: entity.h  fish.h  player.h  playerAi.h  scene.h
src/: Logger.cpp  Scene.cpp  World.cpp
test/: TestComponentRegistry.cpp  TestComponentStore.cpp
(+40 files in other folders)
